--- a/new.html
+++ b/new.html
@@ -5,10 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="new.css">
 </head>
 <body>
     
-<h1>I love you</h1>
+<div class="container">
+    <div class="card">
+        <figure>
+            <img src="img/Barcelona.jpeg" alt="ciudad de Barcelona">
+        </figure>
+        <div class="content">
+            <h3>Barcelona</h3>
+            <p>Ciudad elegida para celebrar en abril de 2024 el Decenio del Océano de la UNESCO...</p>
+            <a href="#">Leer Más</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <figure>
+            <img src="img/temperature.jpg" alt="termómetro en la playa">
+        </figure>
+        <div class="content">
+            <h3>Crisis climática</h3>
+            <p>Todos los mares sin hielo registraron temperatura máximas de récord en mayo, según Copernicus...</p>
+            <a href="#">Leer Más</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <figure>
+            <img src="img/marine-litter.jpg" alt="basura en el mar">
+        </figure>
+        <div class="content">
+            <h3>Basura marina</h3>
+            <p>Un nuevo modelo computacional desvela la acumulación y la ruta de la basura en los océanos...</p>
+            <a href="#">Leer Más</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <figure>
+            <img src="img/ocean-help.jpg" alt="banco de peces en el mar">
+        </figure>
+        <div class="content">
+            <h3>Tratado de conservación</h3>
+            <p>Tras años de discusiones, finalmente ha sido aprobado el tratado de conservación y uso sostenible de la biodiversidad marina...</p>
+            <a href="#">Leer Más</a>
+        </div>
+    </div>
+</div>
 
 
 
