--- a/admin.html
+++ b/admin.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="geo.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="gallery.css">
+
 </head>
 <body>
     
+    <h1>Panel de Administración</h1>
+    <input type="file" name="foto" id="foto" multiple>
+    <div id="preview-container"></div>
+    
 
-
-
-
-
-
+    <script src="script.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
