--- a/admin.html
+++ b/admin.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="gallery.css">
 
 </head>
+
 <body>
     
-    <h1>Panel de Administración</h1>
+    <h1 class="tittle-panel">Panel de Administración</h1>
     <input type="file" name="foto" id="foto" multiple>
     <div id="preview-container"></div>
     
