--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
 <body>
     <div id="content">
 
-      <h1>Galería</h1>
+      <h1 class="tittle-panel">Seres del Océano</h1>
     <div id="gallery">
 
     </div>
